--- a/.github/workflows/article-count.yml
+++ b/.github/workflows/article-count.yml
@@ -10,4 +10,13 @@ jobs:
       - uses: lyqht/article-count-workflow@badge-maker
         with:
           feed_list: "https://esteetey.dev/rss.xml"
+          redirect_link: "https:/esteetey.dev"
+          tag_post_pre_newline: true
           readme_path: "README.md"
+          comment_tag_name: "ARTICLE_BADGE_HERE"
+          badge_style: for-the-badge
+          badge_label: You cool website here
+          badge_message_suffix: papers
+          badge_message_bg_color: "#F9D3C6"
+
+
