--- a/.github/workflows/article-count.yml
+++ b/.github/workflows/article-count.yml
@@ -9,12 +9,12 @@ jobs:
     steps:
       - uses: lyqht/article-count-workflow@main
         with:
-          feed_list: "https://esteetey.dev/rss.xml"
-          redirect_link: "https:/esteetey.dev"
+          feed_list: "https://blog.sycamore.design/rss.xml"
+          redirect_link: "https://blog.sycamore.design/"
           tag_post_pre_newline: true
           readme_path: "README.md"
           comment_tag_name: "ARTICLE_BADGE_HERE"
           badge_style: for-the-badge
-          badge_label: "You cool website here 😎"
-          badge_message_suffix: papers
-          badge_message_bg_color: "#F9D3C6"
+          badge_label: "Sycamore Design 😎"
+          badge_message_suffix: "tips 📜"
+          badge_message_bg_color: "#0EB18F"
